# cyber-log-parser

./: .gitignore  LICENSE  README.md  benchmark.py  requirements.txt
api/: main.py  routes.py
models/: log_models.py
processing/: parser.py
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  parser.rs
tests/: test_api.py  test_parser.rs
