[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "log_parser"
crate-type = ["cdylib"]  # Build as a dynamic library

[dependencies]
pyo3 = { version = "0.22.3", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup", "-C", "target-cpu=native"]
