[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "log_parser"
crate-type = ["cdylib"]  # Build as a dynamic library

[dependencies]
pyo3 = { version = "0.22.3", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.8", features = ["json"] }
rand = "0.8"
chrono = "0.4"
futures = "0.3.31"
indicatif = "0.17.8"

[build]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup", "-C", "target-cpu=native"]
